fix: z-index focused UI elements

--- a/UI.css
+++ b/UI.css
@@ -1185,7 +1185,7 @@ a.UI_angle-up::after, .UI_button.UI_angle-up::after {
     --UI_form-border-color: var(--UI_form-invalid-border-color);
     --UI_form-shadow: var(--UI_form-invalid-shadow);
     border-width: var(--UI_form-border-width);
-    z-index: 1;
+    z-index: 0;
 }
 
 /*---------------------------------------------- Focus form ---*/
@@ -1196,7 +1196,7 @@ a.UI_angle-up::after, .UI_button.UI_angle-up::after {
     --UI_form-border-color: var(--UI_form-focus-border-color);
     --UI_form-shadow: var(--UI_form-focus-shadow);
     border-width: var(--UI_form-border-width);
-    z-index: 1;
+    z-index: 0;
 }
 
 /*---------------------------------------------- Required form ---*/
